unpackaged/main/default/objects/Technology_Preference__c/Technology_Preference__c.object-meta.xml
<CustomObject>
    <label>Technology Preference</label>
    <nameField>
        <displayFormat>TECH-{000}</displayFormat>
        <label>Technology Preference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technology Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>