unpackaged/main/default/objects/Technology_Preference__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Technology Preferences</relationshipLabel>
    <relationshipName>Technology_Preferences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>