unpackaged/main/default/objects/Technology_Preference__c/fields/Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Technology_Type__c</fullName>
    <label>Technology Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full FSL Technology</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>TowBook</fullName>
            </value>
            <value>
                <fullName>TowBook Notify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>