unpackaged/main/default/objects/Technology_Preference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Technology_Type__c</columns>
    <columns>Days_Applied__c</columns>
    <filterScope>Everything</filterScope>
    <label>All - Details</label>
</ListView>