unpackaged/main/default/objects/Technology_Preference__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Technology_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>