unpackaged/main/default/objects/Technology_Preference__c/listViews/All_Landline_Preferences.listView-meta.xml
<ListView>
    <fullName>All_Landline_Preferences</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Technology_Type__c</columns>
    <columns>Days_Applied__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Technology_Type__c</field>
        <operation>equals</operation>
        <value>Landline</value>
    </filters>
    <label>All Landline Preferences</label>
</ListView>