unpackaged/main/default/objects/Technology_Preference__c/listViews/By_Facility.listView-meta.xml
<ListView>
    <fullName>By_Facility</fullName>
    <columns>NAME</columns>
    <columns>Service_Territory__c</columns>
    <columns>Technology_Type__c</columns>
    <columns>Days_Applied__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Territory__c</field>
        <operation>contains</operation>
        <value>429820</value>
    </filters>
    <label>By Facility</label>
    <sharedTo>
        <group>All_Administrators</group>
    </sharedTo>
</ListView>